Redesign upload workflow (#78)
